--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-divider": "^1.0.3",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-image-picker": "^2.0.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.2",
-    "react-navigation-tabs": "^2.6.2"
+    "react-navigation-tabs": "^2.6.2",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
